v0.5.079: BRB Dark mode fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,7 +49,7 @@
         --amber:         #fbbf24;
         --danger:        #d82335;
 
-        --t-brb-bg:        #2b2b2b;
+        --t-brb-bg:        #ffffff;
         --t-brb-fg:        #e8364a;
         --t-brb-border:    #e8364a;
         --t-short-bg:      #c01e2e;
